docs/0.19/_sources/api/gammapy.maps.RegionGeom.rst.txt
RegionGeom
==========

.. currentmodule:: gammapy.maps

.. autoclass:: RegionGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~RegionGeom.as_energy_true
      ~RegionGeom.axes
      ~RegionGeom.axes_names
      ~RegionGeom.binsz_wcs
      ~RegionGeom.center_coord
      ~RegionGeom.center_pix
      ~RegionGeom.center_skydir
      ~RegionGeom.data_shape
      ~RegionGeom.data_shape_axes
      ~RegionGeom.frame
      ~RegionGeom.has_energy_axis
      ~RegionGeom.is_allsky
      ~RegionGeom.is_flat
      ~RegionGeom.is_hpx
      ~RegionGeom.is_image
      ~RegionGeom.is_region
      ~RegionGeom.is_regular
      ~RegionGeom.npix
      ~RegionGeom.projection
      ~RegionGeom.region
      ~RegionGeom.wcs
      ~RegionGeom.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~RegionGeom.bin_volume
      ~RegionGeom.contains
      ~RegionGeom.contains_pix
      ~RegionGeom.contains_wcs_pix
      ~RegionGeom.coord_to_idx
      ~RegionGeom.coord_to_pix
      ~RegionGeom.copy
      ~RegionGeom.create
      ~RegionGeom.crop
      ~RegionGeom.data_nbytes
      ~RegionGeom.downsample
      ~RegionGeom.drop
      ~RegionGeom.energy_mask
      ~RegionGeom.from_hdulist
      ~RegionGeom.from_regions
      ~RegionGeom.get_coord
      ~RegionGeom.get_idx
      ~RegionGeom.get_wcs_coord_and_weights
      ~RegionGeom.pad
      ~RegionGeom.pix_to_coord
      ~RegionGeom.pix_to_idx
      ~RegionGeom.plot_region
      ~RegionGeom.replace_axis
      ~RegionGeom.resample_axis
      ~RegionGeom.separation
      ~RegionGeom.slice_by_idx
      ~RegionGeom.solid_angle
      ~RegionGeom.squash
      ~RegionGeom.to_bands_hdu
      ~RegionGeom.to_binsz
      ~RegionGeom.to_binsz_wcs
      ~RegionGeom.to_cube
      ~RegionGeom.to_hdulist
      ~RegionGeom.to_image
      ~RegionGeom.to_wcs_geom
      ~RegionGeom.union
      ~RegionGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: as_energy_true
   .. autoattribute:: axes
   .. autoattribute:: axes_names
   .. autoattribute:: binsz_wcs
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: data_shape_axes
   .. autoattribute:: frame
   .. autoattribute:: has_energy_axis
   .. autoattribute:: is_allsky
   .. autoattribute:: is_flat
   .. autoattribute:: is_hpx
   .. autoattribute:: is_image
   .. autoattribute:: is_region
   .. autoattribute:: is_regular
   .. autoattribute:: npix
   .. autoattribute:: projection
   .. autoattribute:: region
   .. autoattribute:: wcs
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: bin_volume
   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: contains_wcs_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: data_nbytes
   .. automethod:: downsample
   .. automethod:: drop
   .. automethod:: energy_mask
   .. automethod:: from_hdulist
   .. automethod:: from_regions
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: get_wcs_coord_and_weights
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: plot_region
   .. automethod:: replace_axis
   .. automethod:: resample_axis
   .. automethod:: separation
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: squash
   .. automethod:: to_bands_hdu
   .. automethod:: to_binsz
   .. automethod:: to_binsz_wcs
   .. automethod:: to_cube
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_wcs_geom
   .. automethod:: union
   .. automethod:: upsample
